# conjunction

./: .gitignore  AUDIT.html  Cargo.toml  README.md  ROADMAP.md  app.manifest  build-iso-wsl.sh  build-iso.sh  build_status.html  conjunction-app-sync.service  conjunction-app.desktop  manifest.json  session-ses_1338.md  setup_conjunction_ui.sh  walkthrough.html  wget-log
.github/workflows/: ci.yml
app_sync/: Cargo.toml
app_sync/src/: main.rs
application/: Cargo.toml
application/src/: main.rs
archiso/: packages.x86_64  profiledef.sh
archiso/airootfs/etc/sddm.conf.d/: conjunction.conf
archiso/airootfs/etc/skel/Desktop/: conjunction-install.desktop
archiso/airootfs/etc/systemd/system/: conjunction-live-init.service  conjunction-setup.service
archiso/airootfs/etc/systemd/system-preset/: 99-conjunction.preset
archiso/airootfs/etc/systemd/system/getty@tty1.service.d/: autologin.conf
archiso/airootfs/etc/xdg/autostart/: conjunction-init-check.desktop  conjunction-welcome.desktop
archiso/airootfs/usr/lib/systemd/system-preset/: 99-conjunction.preset
archiso/airootfs/usr/share/applications/: conjunction-welcome.desktop
cj/: Cargo.toml
cj/src/: main.rs
conjunction-core/: Cargo.toml
conjunction-core/src/: lib.rs
tests/: conftest.py  test_diagnostics.py  test_export_import.py  test_installer.py  test_migrations.py  test_path_resolution.py  test_prefixes.py  test_snapshots.py
