[package]
name = "application"
version = "1.0.0"
edition = "2021"

[dependencies]
conjunction-core = { path = "../conjunction-core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
regex = { workspace = true }
